# GenAI

./: .gitignore  README.md
A2A/crew_ai/: pyproject.toml
A2A/crew_ai/src/: github_assistant_agent.py
RAG/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.api.yaml  docker-compose.infra.yaml  docker-compose.ui.yaml  docker-compose.yaml  langgraph.json  pyproject.toml
RAG/airflow/: Dockerfile  docker-compose.yaml
RAG/airflow/config/: airflow.cfg
RAG/airflow/dags/: arxiv_paper_ingestion.py
RAG/airflow/dags/nuke_ingestion/: indexing.py  reporting.py  save.py
RAG/api/: README.md  config.py  dependencies.py  main.py  metrics.py  middlewares.py
RAG/api/db/: factory.py
RAG/api/db/interfaces/: postgresql.py
RAG/api/evaluation/: harness.py  nuke_golden_upload.yaml  persistence.py  run_eval.py
RAG/api/knowledge_graph/: __init__.py  client.py  extraction.py  factory.py  ingestion.py
RAG/api/models/: __init__.py  nuke_doc_chunk.py  nuke_page.py
RAG/api/observability/: metrics.py
RAG/api/platform/: __init__.py  lifespan.py  runtime.py
RAG/api/repositories/: __init__.py  nuke_page.py
RAG/api/routers/: agentic_ask.py  ask.py  eval.py  hybrid_search.py  ping.py
RAG/api/schemas/common/: __init__.py
RAG/api/search/: __init__.py  opensearch.py  postgres_embedding.py  protocol.py
RAG/api/services/agents/: README.md  agentic_rag.py  context.py  factory.py  langgraph_local.py  prompts.py  tools.py
RAG/api/services/cache/: client.py  factory.py  semantic.py
RAG/api/services/embeddings/: jina_client.py
RAG/api/services/graph/: client.py  extraction.py
RAG/api/services/indexing/: text_chunker.py
RAG/api/services/langfuse/: client.py
RAG/api/services/ollama/: factory.py
RAG/api/services/opensearch/: client.py  index_config_hybrid.py
RAG/api/services/search/: postgres_embedding.py
RAG/api/services/telegram/: bot.py  factory.py
RAG/api/tests/: conftest.py  test_eval_router.py  test_harness.py  test_metrics_middleware.py
RAG/dagster/: Dockerfile  dagster.yaml  requirements.txt  workspace.yaml
RAG/docs/adr/: 0001-modular-architecture.md
RAG/graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
RAG/graphify-out/2026-07-02/: GRAPH_REPORT.md  graph.json
RAG/graphify-out/2026-07-04/: graph.json  manifest.json
RAG/graphify-out/cache/: stat-index.json
RAG/infra/: README.md
RAG/infra/monitoring/: README.md
RAG/infra/monitoring/alertmanager/: alertmanager.yml
RAG/infra/monitoring/prometheus/: prometheus.yml
RAG/infra/terraform/: Makefile  README.md  check-stack.sh
RAG/infra/terraform/bootstrap/: main.tf  outputs.tf
RAG/monitoring/promtail/: promtail-config.yml
RAG/monitoring/statsd_exporter/: statsd_mapping.yml
RAG/nginx/: nginx.conf
RAG/orchestrators/airflow/: Dockerfile  README.md  requirements-airflow.txt
RAG/orchestrators/airflow/dags/: hello_world.py  nuke_docs_ingestion.py  nuke_kg_extraction.py
RAG/orchestrators/dagster/: Dockerfile  README.md  definitions.py  requirements.txt
RAG/orchestrators/dagster/assets/: __init__.py  nuke_ingestion.py
RAG/orchestrators/prefect/: Dockerfile  entrypoint.sh  requirements.txt
RAG/orchestrators/prefect/flows/: nuke_docs_ingestion.py
RAG/prefect/: Dockerfile  entrypoint.sh
RAG/scripts/: create_tables.py  fire_dashboard_traffic.ps1  fire_dashboard_traffic.sh
RAG/src/: config.py  dependencies.py  main.py  metrics.py  middlewares.py
RAG/src/callbacks/: cost_handler.py  langfuse_handler.py
RAG/src/clients/: grok.py
RAG/src/evaluation/: compare_runs.py  dataset.py  golden_dataset.yaml  harness.py  persistence.py  run_eval.py
RAG/src/models/: nuke_page.py
RAG/src/repositories/: nuke_page.py
RAG/src/routers/: agentic_ask.py  ask.py  hybrid_search.py  ping.py
RAG/src/schemas/: __init__.py  ollama.py
RAG/src/schemas/api/: health.py  search.py
RAG/src/schemas/common/: __init__.py
RAG/src/schemas/embeddings/: jina.py
RAG/src/services/agents/: agentic_rag.py  config.py  context.py  factory.py  models.py  prompts.py  state.py  tools.py
RAG/src/services/embeddings/: jina_client.py
RAG/src/services/indexing/: text_chunker.py
RAG/src/services/langfuse/: client.py  tracer.py
RAG/src/services/ollama/: client.py  prompts.py
RAG/src/services/opensearch/: client.py  query_builder.py
RAG/src/services/telegram/: bot.py
RAG/tests/: README.md  test_airflow_dependencies.py  test_graph_extraction.py  test_graph_ingestion.py  test_neo4j_client.py  test_nuke_page_repository.py  test_rag_interaction_repository.py  test_ray_indexing.py  test_save_nuke_pages.py  test_search_backend.py  test_semantic_cache.py  test_semantic_chunking.py
RAG/tests/fixtures/: semantic_cache_threshold_cases.yaml
RAG/tests/services/agents/: test_agentic_rag_thread_id.py
RAG/ui/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
RAG/ui/app/: globals.css  layout.tsx  page.tsx
RAG/ui/components/: OpenAIChat.tsx  PaperCard.tsx  RAGCopilot.tsx
github_assistant_agent/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
github_assistant_agent/docs/: project-flow-usage.md
github_assistant_agent/src/: .env_example  github_assistant_agent.py  gradio_app.py
github_assistant_agent/tests/: test_github_assistant_agent.py
mid_software_engineer/: .gitignore  README.md  pyproject.toml
mid_software_engineer/src/mid_software_engineer/: __init__.py  agent.py  demo.py  server.py  tracing.py
mid_software_engineer/tests/: test_agent.py  test_server.py  test_tracing.py
multi-agent-a2a-mcp/agents/content_builder/: Dockerfile  claude_service.py  main.py  pyproject.toml  source_intelligence.py
multi-agent-a2a-mcp/agents/judge/: Dockerfile  main.py  pyproject.toml
multi-agent-a2a-mcp/agents/orchestrator/: Dockerfile  authenticated_httpx.py  main.py  pyproject.toml
multi-agent-a2a-mcp/agents/researcher/: Dockerfile  README.md  main.py  pyproject.toml
multi-agent-a2a-mcp/agents/source_intelligence/: Dockerfile  README.md  main.py  pyproject.toml
vllm/: Dockerfile  (+2 more)
(+277 files in other folders)
