[project]
name = "github-assistant-agent"
version = "0.1.0"
description = "Repo-aware GitHub assistant with local indexing and CrewAI Q&A"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.34.1",
    "loguru>=0.7.3",
    "openai>=2.8.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "crewai[tools]>=0.152.0",
    "gradio>=6.19.0",
    "fastembed>=0.8.0",
    "litellm>=1.90.0",
    "pygithub>=2.9.1",
]

[project.scripts]
github-assistant = "github_assistant_agent:main"
github-assistant-plot = "github_assistant_agent:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
only-include = ["src/github_assistant_agent.py", "src/gradio_app.py"]
sources = ["src"]
