[project]
name = "mid-software-engineer"
version = "0.1.0"
description = "A LangChain DeepAgents factory for a mid-level software engineer workflow using selected global gstack skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents[quickjs]>=0.6.12",
    "fastapi>=0.125.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "openai-chatkit>=0.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[project.scripts]
mid-se-agent-demo = "mid_software_engineer.demo:main"
mid-se-agent-ui = "mid_software_engineer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
