[project]
name = "content-builder-agent"
version = "0.1.0"
description = "Content Builder microservice agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp==1.12.4",
    "google-auth>=2.0,<3.0",
    "a2a-sdk[http-server]==0.3.*",
    "boto3>=1.43,<2.0",
    "fastapi==0.124.*",
    "python-dotenv>=1.0,<2.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
