[project]
name = "judge-builder-agent"
version = "0.1.0"
description = "Judge microservice agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp==1.12.4",
    "google-auth>=2.0,<3.0",
    "a2a-sdk[http-server]==0.3.*",
    "crewai>=0.193.2,<1.0.0",
    "fastapi==0.124.*",
    "uvicorn==0.40.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judge_service"]
