[project]
name = "researcher-builder-agent"
version = "0.1.0"
description = "Researcher microservice agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "a2a-sdk[http-server]==0.3.*",
    "fastapi==0.124.*",
    "uvicorn==0.40.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=0.3,<1.0",
    "mcp==1.12.4",
    "google-auth>=2.0,<3.0",
    "pydantic>=2.7,<2.12",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["researcher_service"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
