[project]
name = "source-intelligence-mcp"
version = "0.1.0"
description = "MCP server for current web sources used by course-creation agents"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "httpx>=0.27,<1.0",
    "mcp==1.12.4",
    "pydantic>=2.7,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
